<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AboutActivity"
    android:orientation="vertical"
    android:layout_centerVertical="true">

    <de.hdodenhof.circleimageview.CircleImageView
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:layout_margin="16dp"
        android:src="@drawable/profile_picture" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/dev_name"
        android:textSize="24sp"
        android:textColor="@android:color/black"
        android:textAlignment="center"/>

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp">

            <TextView
                android:text="@string/email"
                android:textSize="16sp"
                android:layout_marginEnd="24dp"/>

            <TextView
                android:text="@string/dev_email"
                android:textSize="16sp" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp">

            <TextView
                android:text="@string/linkedin"
                android:textSize="16sp"
                android:layout_marginEnd="24dp"/>

            <TextView
                android:text="@string/dev_linkedin"
                android:textSize="16sp"/>

        </TableRow>

    </TableLayout>

</LinearLayout>